syntax = "proto3";

service Raft {
    rpc SendHeartbeat (Heartbeat) returns (Response) {}
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote (VoteRequest) returns (VoteResponse) {}
    // TODO: add snapshot rpc
}

service Database {
    rpc RequestData (DbRequest) returns (DbResponse) {}
}

message Response {
    int32 status = 1; 
    string info = 2;
}

message DbRequest {
    int32 type = 1;
    Log data = 2;
}

message DbResponse {
    int32 status = 1;
    Log data = 2;
}

message AppendEntriesRequest {
    int32 term = 1;
    int32 leader_id = 2;
    int32 prev_log_idx = 3;
    int32 prev_log_term = 4;
    int32 leader_commit_idx = 5;
    Log data = 6;
}

message AppendEntriesResponse {
    int32 term = 1;
    bool success = 2;
}

message Heartbeat {
    int32 term = 1;
    int32 lease_time = 2;
}

message InstallSnapshot {
    int32 term = 1;
    int32 leader_id = 2;
    int32 last_incl_idx = 3;
    int32 last_incl_term = 4;
    int32 offset = 5;
    repeated Log data = 6;
    bool done = 7;
}

message Log {
    int32 key = 1;
    int32 value = 2;
}

message VoteRequest {
    int32 term = 1;
    int32 candidate_id = 2;
    int32 last_log_idx = 3;
    int32 last_log_term = 4;
}

message VoteResponse {
    int32 term = 1;
    bool vote_granted = 2;
}
